Fix InputCheckBox label position

--- a/src/components/InputCheckBox/InputCheckBox.sass
+++ b/src/components/InputCheckBox/InputCheckBox.sass
@@ -11,7 +11,6 @@
   width: 25px
   height: 25px
   display: inline-block
-  font-size: $font-size-md
 
   &:hover
     cursor: pointer
@@ -29,7 +28,7 @@
     width: 10px
     height: 5px
     top: 7px
-    right: 7px
+    left: 7px
   
 .invalid 
   & > .input
@@ -43,3 +42,4 @@
   font-size: $font-size-sm
   padding: 5px
   vertical-align: text-bottom
+  line-height: 22px
