Fix InputToggle label position

--- a/src/components/InputToggle/InputToggle.sass
+++ b/src/components/InputToggle/InputToggle.sass
@@ -27,7 +27,7 @@
     border-radius: 50%
     width: 3px
     height: 3px
-    top: 8px
+    top: 9px
     left: 8px
   
 .invalid 
@@ -39,6 +39,7 @@
 .label
   display: inline-block
   text-transform: uppercase
-  font-size: $font-size-md
+  font-size: $font-size-sm
   padding: 5px
   vertical-align: text-bottom
+  line-height: 22px
