Added news sass variables

--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -1,5 +1,13 @@
+// Fonts
 $font-stack: Helvetica, sans-serif;
-
 $font-size-sm: 12px
 $font-size-md: 18px
 $font-size-lg: 24px
+
+// Colors
+$gray-light: #aaa
+$background-default: #fff
+
+
+// Border
+$border-radius: 3px
