Added news css variables

--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -6,7 +6,9 @@ $font-size-lg: 24px
 
 // Colors
 $gray-light: #aaa
+$gray-default: #848f99
 $background-default: #fff
+$default-blue: #14aaf5
 
 
 // Border
