--- a/src/components/Step/Step.sass
+++ b/src/components/Step/Step.sass
@@ -13,6 +13,8 @@
   line-height: 50px
   font-weight: 600
   color: $gray-default
+  position: relative
+  z-index: 1
 
 .is-completed
   background-color: $default-blue
