Fix styles of components at all (defined variables)

--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -12,8 +12,8 @@
 
   &:hover
     cursor: pointer
-    background: #32c1ff
-    border-color: #32c1ff
-    box-shadow: inset 0 0 transparent, 0 0 0 3px #95e0ff
+    background: $light-blue
+    border-color: $light-blue
+    box-shadow: inset 0 0 transparent, 0 0 0 3px $light-blue-shadow
     transition: .2s
 
