--- a/src/components/InputText/InputText.sass
+++ b/src/components/InputText/InputText.sass
@@ -19,9 +19,9 @@
 
 .invalid 
   & > .input
-    border-color: red
+    border-color: $red-warnning
   & > .label
-    color: red
+    color: $red-warnning
 
 .label
   width: 100%
