--- a/src/components/ProgressBar/ProgressBar.sass
+++ b/src/components/ProgressBar/ProgressBar.sass
@@ -1,10 +1,12 @@
+@import 'css/variables'
+
 .progress-bar
-  background-color: rgba(#0000ff, 0.2)
+  background-color: rgba($light-blue, 0.2)
   padding: 0
 
   & > span
     display: inherit
-    background-color: rgba(#0000ff, 0.2)
+    background-color: rgba($light-blue, 0.2)
     height: 15px
     animation-name: grow
     animation-duration: 3s
