--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -9,7 +9,9 @@ $gray-light: #aaa
 $gray-default: #848f99
 $background-default: #fff
 $default-blue: #14aaf5
-
+$light-blue: #32c1ff
+$light-blue-shadow: #95e0ff
+$red-warnning: #ff5263
 
 // Border
 $border-radius: 3px
