--- a/src/components/InputCheckBox/InputCheckBox.sass
+++ b/src/components/InputCheckBox/InputCheckBox.sass
@@ -6,7 +6,7 @@
   display: inline-block
 
 .input
-  border: 1px solid #aaa
+  border: 1px solid $light-blue
   border-radius: 5px
   width: 25px
   height: 25px
@@ -14,10 +14,13 @@
 
   &:hover
     cursor: pointer
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.1)
+    background: $light-blue
+    border-color: $light-blue
+    box-shadow: inset 0 0 transparent, 0 0 0 3px $light-blue-shadow
+    transition: .2s
 
 .is-checked .input
-  background-color: orange
+  background-color: $default-blue
 
   &:after
     content: ""
@@ -27,14 +30,14 @@
     position: absolute
     width: 10px
     height: 5px
-    top: 7px
+    top: 8px
     left: 7px
   
 .invalid 
   & > .input
-    border-color: red
+    border-color: $red-warnning
   & > .label
-    color: red
+    color: $red-warnning
 
 .label
   display: inline-block
