--- a/src/components/SelectBox/SelectBox.sass
+++ b/src/components/SelectBox/SelectBox.sass
@@ -5,7 +5,7 @@
   font-family: $font-stack
 
 .select
-  border: 1px solid #aaa
+  border: 1px solid $gray-light
   background-color: #fff
   border-radius: 5px
   line-height: 28px
@@ -19,10 +19,10 @@
 
 .invalid 
   & > .select
-    border-color: red
-    color: red
+    border-color: $red-warnning
+    color: $red-warnning
   & > .label
-    color: red
+    color: $red-warnning
 
 .label
   width: 100%
