Fixed Button style

--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -7,7 +7,7 @@
   background-color: $default-blue
   color: #fff
   font-size: $font-size-sm
-  padding: 10px
+  padding: 7px 10px
   outline: none
 
   &:hover
