Implemented steps behavior

--- a/src/components/Step/Step.sass
+++ b/src/components/Step/Step.sass
@@ -30,39 +30,39 @@
     width: 15px
     height: 7px
     top: 18px
-    left: 17px
-    opacity: 1
-    animation-name: grow-check
-    animation-duration: .5s
-    animation-timing-function: linear
+    left: 15px
+    // opacity: 1
+    // animation-name: grow-check
+    // animation-duration: .5s
+    // animation-timing-function: linear
 
 
-@keyframes grow-check
-  0%
-    width: 8px
-    height: 4px
-    top: 21px
-    left: 20px
-    opacity: 0
-    border-bottom: 2px solid #fff
-    border-left: 2px solid #fff
+// @keyframes grow-check
+//   0%
+//     width: 8px
+//     height: 4px
+//     top: 21px
+//     left: 20px
+//     opacity: 0
+//     border-bottom: 2px solid #fff
+//     border-left: 2px solid #fff
 
-  80%
-    width: 22px
-    height: 10px
-    top: 15px
-    left: 13px
-    border-bottom: 6px solid #fff
-    border-left: 6px solid #fff
+//   80%
+//     width: 22px
+//     height: 10px
+//     top: 15px
+//     left: 13px
+//     border-bottom: 6px solid #fff
+//     border-left: 6px solid #fff
 
-  100%
-    width: 15px
-    height: 7px
-    top: 18px
-    left: 17px
-    opacity: 1
-    border-bottom: 4px solid #fff
-    border-left: 4px solid #fff
+//   100%
+//     width: 15px
+//     height: 7px
+//     top: 18px
+//     left: 17px
+//     opacity: 1
+//     border-bottom: 4px solid #fff
+//     border-left: 4px solid #fff
 
 
 
