--- a/src/components/Step/Step.sass
+++ b/src/components/Step/Step.sass
@@ -31,39 +31,49 @@
     height: 7px
     top: 18px
     left: 15px
-    // opacity: 1
-    // animation-name: grow-check
-    // animation-duration: .5s
-    // animation-timing-function: linear
+    opacity: 1
+    animation-name: grow-check
+    animation-duration: .5s
+    animation-timing-function: linear
 
+.line-way
+  display: inline-block
+  height: 5px
+  background-color: $gray-light
+  width: 50px
+  margin-left: -5px
+  margin-right: -5px
+  vertical-align: top
+  position: relative
+  z-index: 0
+  top: 25px
 
-// @keyframes grow-check
-//   0%
-//     width: 8px
-//     height: 4px
-//     top: 21px
-//     left: 20px
-//     opacity: 0
-//     border-bottom: 2px solid #fff
-//     border-left: 2px solid #fff
+.is-line-completed
+  background-color: $default-blue
 
-//   80%
-//     width: 22px
-//     height: 10px
-//     top: 15px
-//     left: 13px
-//     border-bottom: 6px solid #fff
-//     border-left: 6px solid #fff
+@keyframes grow-check
+  0%
+    width: 8px
+    height: 4px
+    top: 21px
+    left: 20px
+    opacity: 0
+    border-bottom: 2px solid #fff
+    border-left: 2px solid #fff
 
-//   100%
-//     width: 15px
-//     height: 7px
-//     top: 18px
-//     left: 17px
-//     opacity: 1
-//     border-bottom: 4px solid #fff
-//     border-left: 4px solid #fff
+  80%
+    width: 22px
+    height: 10px
+    top: 15px
+    left: 13px
+    border-bottom: 6px solid #fff
+    border-left: 6px solid #fff
 
-
-
-
+  100%
+    width: 15px
+    height: 7px
+    top: 18px
+    left: 17px
+    opacity: 1
+    border-bottom: 4px solid #fff
+    border-left: 4px solid #fff
